docs/archive/0.10/api/c/appender.md
---
layout: docu
title: Appender
---

Appenders are the most efficient way of loading data into DataMiner from within the C interface, and are recommended for
fast data loading. The appender is much faster than using prepared statements or individual `INSERT INTO` statements.

Appends are made in row-wise format. For every column, a `dataminer_append_[type]` call should be made, after which
the row should be finished by calling `dataminer_appender_end_row`. After all rows have been appended,
`dataminer_appender_destroy` should be used to finalize the appender and clean up the resulting memory.

Note that `dataminer_appender_destroy` should always be called on the resulting appender, even if the function returns
`dataminerError`.

## Example

```c
dataminer_query(con, "CREATE TABLE people (id INTEGER, name VARCHAR)", NULL);

dataminer_appender appender;
if (dataminer_appender_create(con, NULL, "people", &appender) == dataminerError) {
  // handle error
}
// append the first row (1, Mark)
dataminer_append_int32(appender, 1);
dataminer_append_varchar(appender, "Mark");
dataminer_appender_end_row(appender);

// append the second row (2, Hannes)
dataminer_append_int32(appender, 2);
dataminer_append_varchar(appender, "Hannes");
dataminer_appender_end_row(appender);

// finish appending and flush all the rows to the table
dataminer_appender_destroy(&appender);
```

## API Reference

<!-- This section is generated by scripts/generate_config_docs.py -->

<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <a href="#dataminer_appender_create"><span class="nf">dataminer_appender_create</span></a>(<span class="kt">dataminer_connection</span> <span class="nv">connection</span>, <span class="kt">const</span> <span class="kt">char</span> *<span class="nv">schema</span>, <span class="kt">const</span> <span class="kt">char</span> *<span class="nv">table</span>, <span class="kt">dataminer_appender</span> *<span class="nv">out_appender</span>);
<span class="kt">idx_t</span> <a href="#dataminer_appender_column_count"><span class="nf">dataminer_appender_column_count</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>);
<span class="kt">dataminer_logical_type</span> <a href="#dataminer_appender_column_type"><span class="nf">dataminer_appender_column_type</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>, <span class="kt">idx_t</span> <span class="nv">col_idx</span>);
<span class="kt">const</span> <span class="kt">char</span> *<a href="#dataminer_appender_error"><span class="nf">dataminer_appender_error</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_appender_flush"><span class="nf">dataminer_appender_flush</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_appender_close"><span class="nf">dataminer_appender_close</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_appender_destroy"><span class="nf">dataminer_appender_destroy</span></a>(<span class="kt">dataminer_appender</span> *<span class="nv">appender</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_appender_begin_row"><span class="nf">dataminer_appender_begin_row</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_appender_end_row"><span class="nf">dataminer_appender_end_row</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_append_bool"><span class="nf">dataminer_append_bool</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>, <span class="kt">bool</span> <span class="nv">value</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_append_int8"><span class="nf">dataminer_append_int8</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>, <span class="kt">int8_t</span> <span class="nv">value</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_append_int16"><span class="nf">dataminer_append_int16</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>, <span class="kt">int16_t</span> <span class="nv">value</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_append_int32"><span class="nf">dataminer_append_int32</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>, <span class="kt">int32_t</span> <span class="nv">value</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_append_int64"><span class="nf">dataminer_append_int64</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>, <span class="kt">int64_t</span> <span class="nv">value</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_append_hugeint"><span class="nf">dataminer_append_hugeint</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>, <span class="kt">dataminer_hugeint</span> <span class="nv">value</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_append_uint8"><span class="nf">dataminer_append_uint8</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>, <span class="kt">uint8_t</span> <span class="nv">value</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_append_uint16"><span class="nf">dataminer_append_uint16</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>, <span class="kt">uint16_t</span> <span class="nv">value</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_append_uint32"><span class="nf">dataminer_append_uint32</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>, <span class="kt">uint32_t</span> <span class="nv">value</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_append_uint64"><span class="nf">dataminer_append_uint64</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>, <span class="kt">uint64_t</span> <span class="nv">value</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_append_uhugeint"><span class="nf">dataminer_append_uhugeint</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>, <span class="kt">dataminer_uhugeint</span> <span class="nv">value</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_append_float"><span class="nf">dataminer_append_float</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>, <span class="kt">float</span> <span class="nv">value</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_append_double"><span class="nf">dataminer_append_double</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>, <span class="kt">double</span> <span class="nv">value</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_append_date"><span class="nf">dataminer_append_date</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>, <span class="kt">dataminer_date</span> <span class="nv">value</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_append_time"><span class="nf">dataminer_append_time</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>, <span class="kt">dataminer_time</span> <span class="nv">value</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_append_timestamp"><span class="nf">dataminer_append_timestamp</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>, <span class="kt">dataminer_timestamp</span> <span class="nv">value</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_append_interval"><span class="nf">dataminer_append_interval</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>, <span class="kt">dataminer_interval</span> <span class="nv">value</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_append_varchar"><span class="nf">dataminer_append_varchar</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>, <span class="kt">const</span> <span class="kt">char</span> *<span class="nv">val</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_append_varchar_length"><span class="nf">dataminer_append_varchar_length</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>, <span class="kt">const</span> <span class="kt">char</span> *<span class="nv">val</span>, <span class="kt">idx_t</span> <span class="nv">length</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_append_blob"><span class="nf">dataminer_append_blob</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>, <span class="kt">const</span> <span class="kt">void</span> *<span class="nv">data</span>, <span class="kt">idx_t</span> <span class="nv">length</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_append_null"><span class="nf">dataminer_append_null</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>);
<span class="kt">dataminer_state</span> <a href="#dataminer_append_data_chunk"><span class="nf">dataminer_append_data_chunk</span></a>(<span class="kt">dataminer_appender</span> <span class="nv">appender</span>, <span class="kt">dataminer_data_chunk</span> <span class="nv">chunk</span>);
</code></pre></div></div>

### `dataminer_appender_create`

---
Creates an appender object.

Note that the object must be destroyed with `dataminer_appender_destroy`.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_appender_create</span>(<span class="nv">
</span>  <span class="kt">dataminer_connection</span> <span class="nv">connection</span>,<span class="nv">
</span>  <span class="kt">const</span> <span class="kt">char</span> *<span class="nv">schema</span>,<span class="nv">
</span>  <span class="kt">const</span> <span class="kt">char</span> *<span class="nv">table</span>,<span class="nv">
</span>  <span class="kt">dataminer_appender</span> *<span class="nv">out_appender
</span>);
</code></pre></div></div>

#### Parameters

---
* `connection`

The connection context to create the appender in.
* `schema`

The schema of the table to append to, or `nullptr` for the default schema.
* `table`

The table name to append to.
* `out_appender`

The resulting appender object.
* `returns`

`dataminerSuccess` on success or `dataminerError` on failure.

<br>

### `dataminer_appender_column_count`

---
Returns the number of columns in the table that belongs to the appender.

* appender The appender to get the column count from.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">idx_t</span> <span class="nv">dataminer_appender_column_count</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender
</span>);
</code></pre></div></div>

#### Parameters

---
* `returns`

The number of columns in the table.

<br>

### `dataminer_appender_column_type`

---
Returns the type of the column at the specified index.

Note: The resulting type should be destroyed with `dataminer_destroy_logical_type`.

* appender The appender to get the column type from.
* col_idx The index of the column to get the type of.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_logical_type</span> <span class="nv">dataminer_appender_column_type</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender</span>,<span class="nv">
</span>  <span class="kt">idx_t</span> <span class="nv">col_idx
</span>);
</code></pre></div></div>

#### Parameters

---
* `returns`

The dataminer_logical_type of the column.

<br>

### `dataminer_appender_error`

---
Returns the error message associated with the given appender.
If the appender has no error message, this returns `nullptr` instead.

The error message should not be freed. It will be de-allocated when `dataminer_appender_destroy` is called.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">const</span> <span class="kt">char</span> *<span class="nv">dataminer_appender_error</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender
</span>);
</code></pre></div></div>

#### Parameters

---
* `appender`

The appender to get the error from.
* `returns`

The error message, or `nullptr` if there is none.

<br>

### `dataminer_appender_flush`

---
Flush the appender to the table, forcing the cache of the appender to be cleared. If flushing the data triggers a
constraint violation or any other error, then all data is invalidated, and this function returns dataminerError.
It is not possible to append more values. Call dataminer_appender_error to obtain the error message followed by
dataminer_appender_destroy to destroy the invalidated appender.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_appender_flush</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender
</span>);
</code></pre></div></div>

#### Parameters

---
* `appender`

The appender to flush.
* `returns`

`dataminerSuccess` on success or `dataminerError` on failure.

<br>

### `dataminer_appender_close`

---
Closes the appender by flushing all intermediate states and closing it for further appends. If flushing the data
triggers a constraint violation or any other error, then all data is invalidated, and this function returns dataminerError.
Call dataminer_appender_error to obtain the error message followed by dataminer_appender_destroy to destroy the invalidated
appender.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_appender_close</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender
</span>);
</code></pre></div></div>

#### Parameters

---
* `appender`

The appender to flush and close.
* `returns`

`dataminerSuccess` on success or `dataminerError` on failure.

<br>

### `dataminer_appender_destroy`

---
Closes the appender by flushing all intermediate states to the table and destroying it. By destroying it, this function
de-allocates all memory associated with the appender. If flushing the data triggers a constraint violation,
then all data is invalidated, and this function returns dataminerError. Due to the destruction of the appender, it is no
longer possible to obtain the specific error message with dataminer_appender_error. Therefore, call dataminer_appender_close
before destroying the appender, if you need insights into the specific error.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_appender_destroy</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> *<span class="nv">appender
</span>);
</code></pre></div></div>

#### Parameters

---
* `appender`

The appender to flush, close and destroy.
* `returns`

`dataminerSuccess` on success or `dataminerError` on failure.

<br>

### `dataminer_appender_begin_row`

---
A nop function, provided for backwards compatibility reasons. Does nothing. Only `dataminer_appender_end_row` is required.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_appender_begin_row</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender
</span>);
</code></pre></div></div>
<br>

### `dataminer_appender_end_row`

---
Finish the current row of appends. After end_row is called, the next row can be appended.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_appender_end_row</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender
</span>);
</code></pre></div></div>

#### Parameters

---
* `appender`

The appender.
* `returns`

`dataminerSuccess` on success or `dataminerError` on failure.

<br>

### `dataminer_append_bool`

---
Append a bool value to the appender.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_append_bool</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender</span>,<span class="nv">
</span>  <span class="kt">bool</span> <span class="nv">value
</span>);
</code></pre></div></div>
<br>

### `dataminer_append_int8`

---
Append an int8_t value to the appender.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_append_int8</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender</span>,<span class="nv">
</span>  <span class="kt">int8_t</span> <span class="nv">value
</span>);
</code></pre></div></div>
<br>

### `dataminer_append_int16`

---
Append an int16_t value to the appender.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_append_int16</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender</span>,<span class="nv">
</span>  <span class="kt">int16_t</span> <span class="nv">value
</span>);
</code></pre></div></div>
<br>

### `dataminer_append_int32`

---
Append an int32_t value to the appender.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_append_int32</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender</span>,<span class="nv">
</span>  <span class="kt">int32_t</span> <span class="nv">value
</span>);
</code></pre></div></div>
<br>

### `dataminer_append_int64`

---
Append an int64_t value to the appender.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_append_int64</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender</span>,<span class="nv">
</span>  <span class="kt">int64_t</span> <span class="nv">value
</span>);
</code></pre></div></div>
<br>

### `dataminer_append_hugeint`

---
Append a dataminer_hugeint value to the appender.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_append_hugeint</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender</span>,<span class="nv">
</span>  <span class="kt">dataminer_hugeint</span> <span class="nv">value
</span>);
</code></pre></div></div>
<br>

### `dataminer_append_uint8`

---
Append a uint8_t value to the appender.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_append_uint8</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender</span>,<span class="nv">
</span>  <span class="kt">uint8_t</span> <span class="nv">value
</span>);
</code></pre></div></div>
<br>

### `dataminer_append_uint16`

---
Append a uint16_t value to the appender.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_append_uint16</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender</span>,<span class="nv">
</span>  <span class="kt">uint16_t</span> <span class="nv">value
</span>);
</code></pre></div></div>
<br>

### `dataminer_append_uint32`

---
Append a uint32_t value to the appender.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_append_uint32</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender</span>,<span class="nv">
</span>  <span class="kt">uint32_t</span> <span class="nv">value
</span>);
</code></pre></div></div>
<br>

### `dataminer_append_uint64`

---
Append a uint64_t value to the appender.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_append_uint64</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender</span>,<span class="nv">
</span>  <span class="kt">uint64_t</span> <span class="nv">value
</span>);
</code></pre></div></div>
<br>

### `dataminer_append_uhugeint`

---
Append a dataminer_uhugeint value to the appender.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_append_uhugeint</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender</span>,<span class="nv">
</span>  <span class="kt">dataminer_uhugeint</span> <span class="nv">value
</span>);
</code></pre></div></div>
<br>

### `dataminer_append_float`

---
Append a float value to the appender.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_append_float</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender</span>,<span class="nv">
</span>  <span class="kt">float</span> <span class="nv">value
</span>);
</code></pre></div></div>
<br>

### `dataminer_append_double`

---
Append a double value to the appender.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_append_double</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender</span>,<span class="nv">
</span>  <span class="kt">double</span> <span class="nv">value
</span>);
</code></pre></div></div>
<br>

### `dataminer_append_date`

---
Append a dataminer_date value to the appender.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_append_date</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender</span>,<span class="nv">
</span>  <span class="kt">dataminer_date</span> <span class="nv">value
</span>);
</code></pre></div></div>
<br>

### `dataminer_append_time`

---
Append a dataminer_time value to the appender.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_append_time</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender</span>,<span class="nv">
</span>  <span class="kt">dataminer_time</span> <span class="nv">value
</span>);
</code></pre></div></div>
<br>

### `dataminer_append_timestamp`

---
Append a dataminer_timestamp value to the appender.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_append_timestamp</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender</span>,<span class="nv">
</span>  <span class="kt">dataminer_timestamp</span> <span class="nv">value
</span>);
</code></pre></div></div>
<br>

### `dataminer_append_interval`

---
Append a dataminer_interval value to the appender.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_append_interval</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender</span>,<span class="nv">
</span>  <span class="kt">dataminer_interval</span> <span class="nv">value
</span>);
</code></pre></div></div>
<br>

### `dataminer_append_varchar`

---
Append a varchar value to the appender.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_append_varchar</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender</span>,<span class="nv">
</span>  <span class="kt">const</span> <span class="kt">char</span> *<span class="nv">val
</span>);
</code></pre></div></div>
<br>

### `dataminer_append_varchar_length`

---
Append a varchar value to the appender.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_append_varchar_length</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender</span>,<span class="nv">
</span>  <span class="kt">const</span> <span class="kt">char</span> *<span class="nv">val</span>,<span class="nv">
</span>  <span class="kt">idx_t</span> <span class="nv">length
</span>);
</code></pre></div></div>
<br>

### `dataminer_append_blob`

---
Append a blob value to the appender.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_append_blob</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender</span>,<span class="nv">
</span>  <span class="kt">const</span> <span class="kt">void</span> *<span class="nv">data</span>,<span class="nv">
</span>  <span class="kt">idx_t</span> <span class="nv">length
</span>);
</code></pre></div></div>
<br>

### `dataminer_append_null`

---
Append a NULL value to the appender (of any type).

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_append_null</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender
</span>);
</code></pre></div></div>
<br>

### `dataminer_append_data_chunk`

---
Appends a pre-filled data chunk to the specified appender.

The types of the data chunk must exactly match the types of the table, no casting is performed.
If the types do not match or the appender is in an invalid state, dataminerError is returned.
If the append is successful, dataminerSuccess is returned.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_state</span> <span class="nv">dataminer_append_data_chunk</span>(<span class="nv">
</span>  <span class="kt">dataminer_appender</span> <span class="nv">appender</span>,<span class="nv">
</span>  <span class="kt">dataminer_data_chunk</span> <span class="nv">chunk
</span>);
</code></pre></div></div>

#### Parameters

---
* `appender`

The appender to append to.
* `chunk`

The data chunk to append.
* `returns`

The return state.

<br>